syntax = "proto3";
package babylon.checkpointing.v1;

import "gogoproto/gogo.proto";
import "babylon/checkpointing/checkpoint.proto";
import "babylon/checkpointing/bls_key.proto";
import "cosmos/staking/v1beta1/tx.proto";

option go_package = "github.com/babylonchain/babylon/x/checkpointing/types";

// Msg defines the checkpointing Msg service.
service Msg {
  // AddBlsSig defines a method for accumulating BLS signatures
  rpc AddBlsSig(MsgAddBlsSig) returns (MsgAddBlsSigResponse);

  // WrappedCreateValidator defines a method for registering a new validator
  rpc WrappedCreateValidator(MsgWrappedCreateValidator) returns (MsgWrappedCreateValidatorResponse);
}

// MsgAddBlsSig defines a message to add a bls signature from a
// validator
message MsgAddBlsSig {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  BlsSig bls_sig = 1;
}

// MsgAddBlsSigResponse defines the MsgAddBlsSig response type.
message MsgAddBlsSigResponse {}

// MsgWrappedCreateValidator defines a wrapped message to create a validator
message MsgWrappedCreateValidator {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  BlsKey key = 1;
  cosmos.staking.v1beta1.MsgCreateValidator msg_create_validator = 2;
}

// MsgWrappedCreateValidatorResponse defines the MsgWrappedCreateValidator response type
message MsgWrappedCreateValidatorResponse {}
